--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,9 @@
     "autoprefixer": "^10.4.19",
     "axios": "^1.7.2",
     "chart.js": "^4.4.3",
+    "dayjs": "^1.11.11",
+    "dayjs-plugin-utc": "^0.1.2",
+    "lodash": "^4.17.21",
     "mobx": "^6.12.4",
     "mobx-react-lite": "^4.0.7",
     "postcss": "^8.4.38",
@@ -25,6 +28,7 @@
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
     "react-select": "^5.8.0",
+    "socket.io-client": "^4.7.5",
     "tailwindcss": "^3.4.4",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
@@ -54,6 +58,7 @@
     ]
   },
   "devDependencies": {
+    "@types/lodash": "^4.17.5",
     "@types/react-select": "^5.0.1"
   }
 }
