--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -22,6 +22,9 @@ FROM nginx:stable-alpine
 # Copy the build output to replace the default nginx contents.
 COPY --from=build /app/build /usr/share/nginx/html
 
+# Copy custom nginx config
+COPY ./nginx.conf /etc/nginx/conf.d/default.conf
+
 # Expose port 80
 EXPOSE 80
 
